--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="buildProject GIS Viewer Build" default="default">
 	
-	<property name="dojo-svn-cache" location="c:/dojoSvnCache/dojo" />
-	<available file="${dojo-svn-cache}/util/buildscripts/build.bat" property="dojo-svn-cached"/>
-	<available file="${dojo-svn-cache}/dijit/dijit.js" property="dijit-svn-cached"/>
+	<property name="dojo-svn-cache" location="c:/dojoSvnCache" />
 	
 	<property name="dist" location="dist" />
 	<property name="web" location="web" />
@@ -11,14 +9,8 @@
 	
 	<property name="dojoDeleteExclude" value="dojo.js,nls/dojo_en-us.js" />
 	<property name="dojoxDeleteExclude" value="gfx/shape.js,gfx/path.js,gfx/svg.js,gfx/vml.js,gfx/arc.js,gfx/gradient.js,gfx/_base.js" />
-	<property name="buildProjectDeleteExclude" value="SiteManager.js,nls/SiteManager_en-us.js," />
 	
-	<path id="build.classpath">
-		<fileset dir="build/lib" includes="*.jar" />
-	</path>
 	<target name="default" depends="CLEAN_DIST,CREATE_DIST,copy-files,build" />
-	<typedef resource="org/tigris/subversion/svnant/svnantlib.xml" classpathref="build.classpath" />
-	<taskdef name="jsapi-fetch" classname="com.esri.ant.JsapiFetchTask" classpathref="build.classpath" />
 	
 	
 	<!-- delete the old app directory & war, if it exists -->
@@ -39,52 +31,38 @@
 		</copy>
 	</target>
 	
-	<target name="checkout-dojo-utils" unless="dojo-svn-cached">
-		<echo>
-			Dojo utilities not found.  Caching dojo src...
-		</echo>
-		
-		<svn>
-			<export srcUrl="https://github.com/dojo/dojo/tags/1.9.1" destPath="${dojo-svn-cache}/dojo" />
-			<export srcUrl="https://github.com/dojo/util/tags/1.9.1" destPath="${dojo-svn-cache}/util" />
-		</svn>
-	</target>
 	
-	<target name="checkout-dijit-dojox" unless="dijit-svn-cached">
-			<echo>
-				Dijit/Dojox not found.  Caching dojo src...
-			</echo>
-			
-			<svn>
-				<export srcUrl="https://github.com/dojo/dijit/tags/1.9.1" destPath="${dojo-svn-cache}/dijit" />
-				<export srcUrl="https://github.com/dojo/dojox/tags/1.9.1" destPath="${dojo-svn-cache}/dojox" />
-			</svn>
-	</target>
-	
-	<target name="build" depends="checkout-dojo-utils,checkout-dijit-dojox">
+	<target name="build">
 		<echo>
 			Running dojo build
 		</echo>
 
 		<!-- copy the dojo files to web directory -->
 		<copy todir="${dist}/${appname}/js/dojo">
-			<fileset dir="${dojo-svn-cache}/dojo" />
+			<fileset dir="${dojo-svn-cache}/js-dojo-1.10.4" />
 		</copy>
 		<copy todir="${dist}/${appname}/js/util">
-			<fileset dir="${dojo-svn-cache}/util" />
+			<fileset dir="${dojo-svn-cache}/js-util-1.10.4" />
 		</copy>
 		<copy todir="${dist}/${appname}/js/dijit">
-			<fileset dir="${dojo-svn-cache}/dijit" />
+			<fileset dir="${dojo-svn-cache}/js-dijit-1.10.4"/>
 		</copy>
 		<copy todir="${dist}/${appname}/js/dojox">
-			<fileset dir="${dojo-svn-cache}/dojox" />
+			<fileset dir="${dojo-svn-cache}/js-dojox-1.10.4" />
+		</copy>
+		<copy todir="${dist}/${appname}/js/dgrid">
+			<fileset dir="${dojo-svn-cache}/js-dgrid-0.3.17" />
+		</copy>
+		<copy todir="${dist}/${appname}/js/put-selector">
+			<fileset dir="${dojo-svn-cache}/js-put-selector-0.3.6" />
+		</copy>
+		<copy todir="${dist}/${appname}/js/xstyle">
+			<fileset dir="${dojo-svn-cache}/js-xstyle-0.1.3" />
 		</copy>
 		<copy todir="${dist}/${appname}/js/esri">
-			<fileset dir="${dojo-svn-cache}/../jsapi3.9amd/js/esri" />
+			<fileset dir="${dojo-svn-cache}/js-esri-3.13-amd/esri" />
 		</copy>
 
-		<!--jsapi-fetch url="http://js.arcgis.com/3.8amd/js" inputs="esriIncludes.txt" destDir="${dist}/${appname}/js"/-->
-		
 		<copy file="build/buildProject.profile.js" todir="${dist}/${appname}/js/util/buildscripts/profiles" />
 		
 		<!-- Run the dojo build utility -->
@@ -119,7 +97,7 @@
 			<replacefilter token="{BUILD-COMMENT}--&gt;" value="" />
 			<replacefilter token="//{BUILD-COMMENT}" value="" />
 			<replacefilter token="isDebug: true" value="isDebug: false" />
-			<replacefilter token="&lt;script type=&quot;text/javascript&quot; src=&quot;http://js.arcgis.com/3.8/&quot;&gt;&lt;/script&gt;" value=""/>
+			<replacefilter token="&lt;script type=&quot;text/javascript&quot; src=&quot;http://js.arcgis.com/3.12/&quot;&gt;&lt;/script&gt;" value=""/>
 		</replace>
 
 		<replaceregexp  file="${dist}/${appname}/index.html" match="// DELETE FROM HERE.*// TO HERE" flags="s" replace="" />
@@ -143,10 +121,4 @@
 		</delete>
 		
 	</target>
-
-	<target name="jsapifetch">
-		<jsapi-fetch url="http://js.arcgis.com/3.8amd/js" inputs="esriIncludes.txt" destDir="${dojoSvnCache}/esri"/>
-	</target>
-	
-	
 </project>
