--- a/package.json
+++ b/package.json
@@ -1,48 +1,19 @@
 {
-  "name": "Enterprise-Build-Sample",
-  "version": "0.0.1",
-  "repository": "https://github.com/ArcGIS/GC-AdvantagePoint.git",
-  "dependencies": {
-    "grunt": "*",
-    "grunt-amdcheck": "*",
-    "grunt-autoprefixer": "*",
-    "grunt-bower-install-simple": "*",
-    "grunt-contrib-clean": "*",
-    "grunt-contrib-connect": "0.9.0",
-    "grunt-contrib-copy": "*",
-    "grunt-contrib-cssmin": "*",
-    "grunt-contrib-jshint": "*",
-    "grunt-contrib-stylus": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-dojo": "*",
-    "grunt-newer": "*",
-    "grunt-open": "*",
-    "grunt-replace": "*",
-    "intern": "*",
-    "jshint-stylish": "*",
-    "proxypage": "*",
-    "uglify-js": "*",
-    "grunt-connect-proxy": "0.1.10"
-  },
-  "engine": "node >= 0.10",
+  "name": "enterprise-test-sample",
+  "version": "1.0.0",
+  "description": "Here is a sample application, bundled with current versions of the patched Dojo source and ESRI JavaScript API AMD Build. The sample uses ArcGIS Online basemaps and services.  Learn more [here](http://www.arcgis.com/about/).",
+  "main": "Gruntfile.js",
   "devDependencies": {
-    "chai": "^1.10.0",
     "grunt": "^0.4.5",
-    "grunt-connect-prism": "^1.0.3",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-dojo": "^1.0.1",
-    "grunt-karma": "^0.10.1",
-    "grunt-text-replace": "^0.4.0",
-    "karma": "^0.12.31",
-    "karma-beep-reporter": "^0.1.4",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.2.7",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-dojo": "^1.1.1",
+    "grunt-karma": "^0.12.1",
+    "grunt-replace": "^0.11.0",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.1.4",
     "karma-dojo": "0.0.1",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-ie-launcher": "^0.1.5",
-    "karma-mocha": "^0.1.10",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "mocha": "^2.1.0"
+    "karma-jasmine": "^0.1.5",
+    "karma-junit-reporter": "^0.3.8"
   }
 }
