--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Here is a sample application, bundled with current versions of the patched Dojo source and ESRI JavaScript API AMD Build. The sample uses ArcGIS Online basemaps and services.  Learn more [here](http://www.arcgis.com/about/).",
   "main": "Gruntfile.js",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
     "grunt-dojo": "^1.1.1",
     "grunt-karma": "^0.12.1",
     "grunt-replace": "^0.11.0",
