Build now works at 4.3
Still some clean up to do, but the build tasks gets the optimized
application into /dist.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 dist/
 node_modules/
+arcgis-js-api/
 enterprise-build-sample-js.sublime-project
 enterprise-build-sample-js.sublime-workspace
 web/js/dgrid/
