--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,12 @@
 {
-  "name": "EnterpriseJSApp",
+  "name": "enterprise-build-sample-js",
   "version": "1.0.0",
-  "devDependencies": {
-    "dojo": "Esri/dojo#v1.10.4/esri-3.14.0",
-    "dijit": "Esri/dijit#v1.10.4/esri-3.14.0",
-    "dojox": "Esri/dojox#v1.10.4/esri-3.14.0",
-    "dgrid": "Esri/dgrid#0.3.17/esri-3.14.0",
-    "xstyle": "Esri/xstyle#0.1.3/esri-3.14.0",
-    "util": "Esri/dojo-util#v1.10.4/esri-3.14.0",
-    "dstore": "#v1.1.0",
-    "put-selector": "#0.3.6",
-    "esri": "Esri/arcgis-js-api#3.16.0",
-	"moment": "^2.12.0"
+  "dependencies": {
+    "esri": "arcgis-js-api#4.3.0"
   },
   "resolutions": {
-    "dojo": "v1.10.4/esri-3.14.0"
+    "dojo": "v1.12.1/esri-3.20.0",
+    "dijit": "v1.12.1/esri-3.20.0",
+    "dojox": "v1.12.1/esri-3.20.0"
   }
 }
