Simplify the grunt build, upgrade karma, move bower install location to support the simplified build

--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,5 @@ node_modules/
 arcgis-js-api/
 enterprise-build-sample-js.sublime-project
 enterprise-build-sample-js.sublime-workspace
-web/js/dgrid/
-web/js/dijit/
-web/js/dojo/.bower.json
-web/js/dojo/
-web/js/dojox/
-web/js/dstore/
-web/js/esri/.bower.json
-web/js/esri/
-web/js/put-selector/
-web/js/util/.bower.json
-web/js/util/
-web/js/xstyle/
-web/js/moment/
+build-src/
+build-temp/
