--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Here is a sample application, bundled with current versions of the patched Dojo source and ESRI JavaScript API AMD Build. The sample uses ArcGIS Online basemaps and services.  Learn more [here](http://www.arcgis.com/about/).",
   "main": "Gruntfile.js",
   "devDependencies": {
-    "dojo-themes": "^1.12.2",
-    "grunt": "^1.0.0",
+    "dojo-themes": "^1.13.0",
+    "grunt": "^1.0.2",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-connect": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
@@ -13,13 +13,14 @@
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-dojo": "^1.1.2",
-    "grunt-karma": "^0.12.1",
-    "grunt-replace": "^0.11.0",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^0.1.4",
+    "grunt-karma": "^2.0.0",
+    "grunt-replace": "^1.0.1",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-dojo": "0.0.1",
-    "karma-jasmine": "^0.1.5",
-    "karma-junit-reporter": "^0.3.8"
+    "karma-jasmine": "^1.1.1",
+    "karma-junit-reporter": "^1.2.0"
   }
 }
