--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,10 @@
   "version": "1.0.0",
   "dependencies": {
     "esri": "arcgis-js-api#4.6.0"
+  },
+  "resolutions": {
+    "dojo": "v1.13.0/esri-3.23.0",
+    "dijit": "v1.13.1/esri-3.23.0",
+    "dojox": "v1.13.1/esri-3.23.0"
   }
 }
