Adding util to resolutions

--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "resolutions": {
     "dojo": "v1.13.0/esri-3.23.0",
     "dijit": "v1.13.0/esri-3.23.0",
-    "dojox": "v1.13.0/esri-3.23.0"
+    "dojox": "v1.13.0/esri-3.23.0",
+    "util": "v1.13.0/esri-3.23.0"
   }
 }
