--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-connect": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-dojo": "^1.1.2",
+    "grunt-eslint": "^20.1.0",
     "grunt-karma": "^2.0.0",
     "grunt-replace": "^1.0.1",
     "grunt-tomcat-deploy": "git://github.com/rsjones/grunt-tomcat-deploy.git",
