--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
 	"extends": "eslint:recommended",
-	env: {
-		browser: true
+	"env": {
+		"browser": true
 	},
     "rules": {
 		"no-console": "off",
@@ -9,5 +9,5 @@
         "quotes": "off",
 		"no-unused-vars": "off",
 		"no-mixed-spaces-and-tabs":"off"
-    }
+	}
 }
