--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "main": "Gruntfile.js",
   "devDependencies": {
     "dojo-themes": "^1.13.0",
-    "grunt": "^1.0.2",
+    "grunt": "^1.0.3",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-connect": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-dojo": "^1.1.2",
     "grunt-eslint": "^20.1.0",
     "grunt-karma": "^2.0.0",
     "grunt-replace": "^1.0.1",
-    "grunt-tomcat-deploy": "git://github.com/rsjones/grunt-tomcat-deploy.git",
+    "grunt-tomcat-deploy": "git@github.com:rsjones/grunt-tomcat-deploy.git",
     "grunt-zip": "^0.10.2",
     "jasmine-core": "^3.1.0",
-    "karma": "^2.0.0",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "^1.1.2",
     "karma-dojo": "0.0.1",
     "karma-jasmine": "^1.1.1",
     "karma-junit-reporter": "^1.2.0"
