--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "1.0.0",
   "description": "Here is a sample application, bundled with current versions of the patched Dojo source and ESRI JavaScript API AMD Build. The sample uses ArcGIS Online basemaps and services.  Learn more [here](http://www.arcgis.com/about/).",
   "main": "Gruntfile.js",
+  "scripts": {
+    "test": "grunt test"
+  },
   "devDependencies": {
     "dojo-themes": "^1.13.0",
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-connect": "^1.0.0",
+    "grunt-contrib-connect": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-dojo": "^1.1.2",
     "grunt-eslint": "^20.1.0",
-    "grunt-karma": "^2.0.0",
-    "grunt-replace": "^1.0.1",
+    "grunt-karma": "^3.0.1",
+    "grunt-replace-regex": "^1.0.2",
     "grunt-tomcat-deploy": "git@github.com:rsjones/grunt-tomcat-deploy.git",
     "grunt-zip": "^0.10.2",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.5",
+    "jasmine-core": "^3.3.0",
+    "karma": "^3.1.3",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-dojo": "0.0.1",
-    "karma-jasmine": "^1.1.1",
-    "karma-junit-reporter": "^1.2.0"
+    "karma-jasmine": "^2.0.1",
+    "karma-junit-reporter": "^1.2.0",
+    "requirejs": "^2.3.6"
   }
 }
