--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "Here is a sample application, bundled with current versions of the patched Dojo source and ESRI JavaScript API AMD Build. The sample uses ArcGIS Online basemaps and services.  Learn more [here](http://www.arcgis.com/about/).",
   "main": "Gruntfile.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production",
+    "serve": "webpack-dev-server --mode production --open --https --compress"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^2.0.0",
+    "css-loader": "^2.1.0",
     "dojo-themes": "^1.13.0",
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "^1.0.0",
@@ -19,6 +24,8 @@
     "grunt-replace-regex": "^1.0.3",
     "grunt-tomcat-deploy": "git@github.com:rsjones/grunt-tomcat-deploy.git",
     "grunt-zip": "^0.10.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "^3.3.0",
     "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
@@ -26,6 +33,14 @@
     "karma-dojo": "0.0.1",
     "karma-jasmine": "^2.0.1",
     "karma-junit-reporter": "^1.2.0",
-    "requirejs": "^2.3.6"
+    "mini-css-extract-plugin": "^0.5.0",
+    "requirejs": "^2.3.6",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
+  },
+  "dependencies": {
+    "@arcgis/webpack-plugin": "^4.10.5"
   }
 }
