--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^2.0.0",
+    "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^2.1.0",
     "dojo-themes": "^1.13.0",
     "grunt": "^1.0.3",
@@ -34,6 +35,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-junit-reporter": "^1.2.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "raw-loader": "^1.0.0",
     "requirejs": "^2.3.6",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
