--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "grunt-eslint": "^20.1.0",
     "grunt-karma": "^3.0.1",
     "grunt-replace-regex": "^1.0.3",
-    "grunt-tomcat-deploy": "git@github.com:rsjones/grunt-tomcat-deploy.git",
+    "grunt-tomcat-deploy": "git://github.com/rsjones/grunt-tomcat-deploy.git",
     "grunt-zip": "^0.10.2",
     "jasmine-core": "^3.3.0",
     "karma": "^3.1.3",
