--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "Gruntfile.js",
   "scripts": {
     "test": "grunt test",
-    "start": "webpack-dev-server --mode development --open",
+    "test:watch": "grunt watch",
+    "start": "npm-run-all --parallel serve:dev test test:watch",
     "build": "webpack --mode production",
-    "serve": "webpack-dev-server --mode production --open --https --compress"
+    "serve": "webpack-dev-server --mode production --open --https --compress",
+    "serve:dev": "webpack-dev-server --mode development --open"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^2.0.0",
@@ -30,6 +32,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-junit-reporter": "^1.2.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "npm-run-all": "^4.1.5",
     "raw-loader": "^1.0.0",
     "requirejs": "^2.3.6",
     "uglifyjs-webpack-plugin": "^2.1.2",
